# texturify

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: release.yml
assets/icon/: app.icns  app.rc
assets/lang/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pt.json  ru.json  tr.json  uk.json
packaging/linux/: texturify.desktop
src/: main.cpp
src/app/: actions.cpp  actions.h  app_paths.cpp  app_paths.h  app_state.h  custom_chrome.cpp  custom_chrome.h  cylinder_silhouette.cpp  cylinder_silhouette.h  diagnostics_runner.cpp  diagnostics_runner.h  file_dialog.h  file_dialog_linux.cpp  file_dialog_macos.mm  file_dialog_win32.cpp  i18n.cpp  i18n.h  json.cpp  json.h  mac_bundle_path.h  mac_bundle_path.mm  masking.cpp  masking.h  native_prefs.cpp  native_prefs.h  pipeline_runner.cpp  pipeline_runner.h  preset_textures.cpp  preset_textures.h  preview_attributes.cpp  preview_attributes.h  project_file.cpp  project_file.h  session_autosave.cpp  session_autosave.h  settings_snapshot.cpp  settings_snapshot.h  undo_stack.cpp  undo_stack.h
src/core/: decimation.cpp  decimation.h  displacement.cpp  displacement.h  exclusion.cpp  exclusion.h  export_pipeline.cpp  export_pipeline.h  exporter.cpp  exporter.h  geometry.cpp  geometry.h  image.cpp  image.h  jsmath.h  loaders.cpp  loaders.h  mapping.cpp  mapping.h  mat4.h  mesh_index.cpp  mesh_index.h  mesh_repair.cpp  mesh_repair.h  mesh_validation.cpp  mesh_validation.h  regularize.cpp  regularize.h  smart_resolution.cpp  smart_resolution.h  subdivision.cpp  subdivision.h  texture_analysis.cpp  texture_analysis.h  xml_mini.cpp  xml_mini.h
src/render/: gl_loader.cpp  gl_loader.h  gl_util.cpp  gl_util.h  math3d.h  preview_material.cpp  preview_material.h  text_texture.cpp  text_texture.h  viewer.cpp  viewer.h
src/ui/: cylinder_panel.cpp  diag_panel.cpp  glass.cpp  glass.h  modals.cpp  panels_left.cpp  panels_right.cpp  theme.cpp  theme.h  toolbar.cpp  ui.h  ui_shell.cpp  viewport_ui.cpp  widgets.cpp  widgets.h
tools/golden/: dump_pipeline.mjs  dump_weld.mjs
tools/verify/: harness.h  verify_main.cpp  verify_pipeline.cpp
